<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/regToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:contentDescription="@string/logoselect" />
    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:layout_margin="12dp"
        android:hint="@string/loginMail"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:padding="12dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"/>

    <EditText
        android:id="@+id/regPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_margin="12dp"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:padding="12dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"/>

    <Button
        android:id="@+id/regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#F41313"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#000000" />
    <TextView
        android:id="@+id/regQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alreadyRegistered"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>