<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:layout_margin="12dp"
        android:hint="@string/loginMail"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:padding="12dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"/>

    <EditText
        android:id="@+id/loginPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_margin="12dp"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:padding="12dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="#F41313"
        android:text="@string/login"
        android:textAllCaps="false"/>
    <TextView
        android:id="@+id/loginQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrationTextQuestion"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"/>


</LinearLayout>